src/com/example/dip/good/NotifierPaymentEmail.java
package com.example.dip.good;

import com.example.User;

public interface NotifierPaymentEmail {

    void notifyPayment(User user);
}
