src/com/example/dip/bad/Notifier.java
package com.example.dip.bad;

public interface Notifier {

    String notifyEmail();
    String NotifySms();
}
